CVS (Fri Apr 18 02:21:56  GMT 2003)
   - Fixed bug : in week view, allow non 'internet explorer' browsers to see
     links to the corresponding days in column titles
     (Johan.Schonning@uab.ericsson.se).

CVS (Thu Apr 17           GMT 2003)
   + Entries in monthly view can be shown as start/end slot or brief description
     (Matt Payton (mpayton@hunterdonhealth.com))

CVS (Tue Apr 15           GMT 2003)
   + replaced the column titles in the week view to be links to the
     corresponding days. This makes it easier for users to access the day view
     from the week view without having to scroll down to the bottom of the page.
     (<sQuare>mrbs@synapse.plus.com)

CVS (Wed Apr 09           GMT 2003)
   - Fixed bug : if AM/PM hour format is used, bookings between
     12:00 AM and 12:59 AM are stored with a wrong start date.

CVS (Mon Mar 31           GMT 2003)
   - bug fix : italian vocab with one character not properly escaped prevents 
     deleting entries and/or prevent javascript popup to works (Pietro donatini)

CVS (Fri Mar 28           GMT 2003)
   - Fixed bug in escaping of username and password for
     all authentication schemes that use HTTP authentication.

CVS (Thu Mar 27           GMT 2003)
   - Fixed bug : if AM/PM hour format is used, bookings between
     12:00 PM and 12:59 PM are stored with a wrong start date.

CVS (Tue Mar 11           GMT 2003)
   + Added translation:     Danish (Claes Bolvig Pedersen (cp@dhi.dk))
   - changed mrbs_version in help.php to "MRBS 1.1"

CVS (Wed Mar 05           GMT 2003)
   + Make MRBS compliant to the 'register_globals = off' directive
   + added translation:     Portuguese (Lopo Pizarro)	

CVS (Thu Jan 30           GMT 2003)
   + added translation:     Finnish (Vesa Palmu)

CVS (Wed Jan 29           GMT 2003)
   - Minor translations updates in lang.fr, lang.no (Tobias)
   - 1 vocab added in functions.inc
   - Bug fix : if "select" is choosen in config.inc to show areas/rooms as a